--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,8 +1,5 @@
 name: Test PowerShell Module
-on:
-    push:
-        tags:
-          - '*'
+on: workflow_dispatch
 jobs:
   publish:
     runs-on: windows-latest
