--- a/AcuInstallerHelper/AcuInstallerHelper_config.json
+++ b/AcuInstallerHelper/AcuInstallerHelper_config.json
@@ -1,5 +1,5 @@
 {
-    "AcumaticaDir" : "C:\\Acumatica\\",
-    "AcumaticaSiteDir" : "Sites\\",
-    "AcumaticaERPVersionDir" : "Version_ERP\\"
+  "AcumaticaDir": "E:\\Repos\\acumatica-installerHelper",
+  "AcumaticaSiteDir": "Sites",
+  "AcumaticaERPVersionDir": "Versions"
 }
