--- a/AcuInstallerHelper/AcuInstallerHelper_config.json
+++ b/AcuInstallerHelper/AcuInstallerHelper_config.json
@@ -1,5 +1,5 @@
 {
-  "AcumaticaDir": "E:\\Repos\\acumatica-installerHelper",
+  "AcumaticaDir": "D:\\Acumatica\\",
   "AcumaticaSiteDir": "Sites",
-  "AcumaticaERPVersionDir": "Versions"
+  "AcumaticaERPVersionDir": "Version_ERP"
 }
