--- a/AcuInstallerHelper/AcuInstallerHelper_config.json
+++ b/AcuInstallerHelper/AcuInstallerHelper_config.json
@@ -1,5 +1,5 @@
 {
   "AcumaticaDir": "D:\\Acumatica\\",
   "AcumaticaSiteDir": "Sites",
-  "AcumaticaERPVersionDir": "Version_ERP"
+  "AcumaticaVersionDir": "Version_ERP"
 }
