Addl Version Endpoints, Fix Site Creation

--- a/AcuInstallerHelper/AcuInstallerHelper_config.json
+++ b/AcuInstallerHelper/AcuInstallerHelper_config.json
@@ -1,5 +1,5 @@
 {
-  "AcumaticaDir": "D:\\Acumatica\\",
+  "AcumaticaDir": "C:\\Acumatica\\",
   "AcumaticaSiteDir": "Sites",
   "AcumaticaVersionDir": "Version_ERP"
 }
