--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,5 +1,12 @@
 name: main
-on: workflow_dispatch
+
+on:
+  pull_request:
+    branches: 
+      - '**'  # This will trigger the workflow for pull requests on any branch
+  push:
+    branches:
+      - 'main'  # This will trigger the workflow for pushes (merges) to the main branch
 
 jobs:
   test:
@@ -17,9 +24,12 @@ jobs:
         run: Invoke-Pester -Path AcuInstallerHelper.Tests.ps1
 
   publish:
+    if: github.ref == 'refs/heads/main' # This job only runs when the branch is 'main'
     needs: test
     runs-on: windows-latest
     steps:
+      - uses: actions/checkout@v3
+
       - name: Publish to PowerShell Gallery
         env:
           NUGET_API_KEY: ${{ secrets.POWERSHELL_GALLERY_API_KEY }}
