--- a/AcuInstallerHelper/AcuInstallerHelper_config.json
+++ b/AcuInstallerHelper/AcuInstallerHelper_config.json
@@ -1,5 +1,7 @@
 {
   "AcumaticaDir": "C:\\Acumatica",
   "AcumaticaSiteDir": "Sites",
-  "AcumaticaVersionDir": "Versions"
+  "AcumaticaVersionDir": "Versions",
+  "SiteType": "Production",
+  "InstallDebugTools": true
 }
