--- a/AcuInstallerHelper/AcuInstallerHelper_config.json
+++ b/AcuInstallerHelper/AcuInstallerHelper_config.json
@@ -1,7 +1,7 @@
 {
   "AcumaticaDir": "C:\\Acumatica",
-  "AcumaticaSiteDir": "Sites",
-  "AcumaticaVersionDir": "Versions",
-  "SiteType": "Production",
+  "AcumaticaSiteDir": "C:\\Sites",
+  "AcumaticaVersionDir": "C:\\TestVersions",
+  "SiteType": "Development",
   "InstallDebugTools": true
 }
