--- a/AcuInstallerHelper/AcuInstallerHelper_config.json
+++ b/AcuInstallerHelper/AcuInstallerHelper_config.json
@@ -3,5 +3,5 @@
   "AcumaticaSiteDir": "Sites",
   "AcumaticaVersionDir": "Versions",
   "SiteType": "Development",
-  "InstallDebugTools": true
+  "InstallDebugTools": false
 }
