--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,11 @@
-AcuInstallerHelper/AcuInstallerHelper_config.json
+
 TestOutput/*
+
+src/*/bin
+src/*/obj
+tests/*/bin
+tests/*/obj
+.vs/
+AcuInstallerHelper/*.dll
+AcuInstallerHelper/*.pdb
+/AcuInstallerHelper/AcuInstallerHelper_config.json
